update apiRoot to same domain

--- a/common/conf/env/PROD.properties
+++ b/common/conf/env/PROD.properties
@@ -29,7 +29,7 @@ id.oauth.url=https://oauth.theguardian.com
 id.membership.stripePublicToken=pk_live_2O6zPMHXNs2AGea4bAmq5R7Z
 
 # Discussion
-discussion.apiRoot=https://discussion.guardianapis.com/discussion-api
+discussion.apiRoot=https://discussion.theguardian.com/discussion-api
 discussion.apiTimeout=2000
 discussion.apiClientHeader=nextgen
 discussion.d2Uid=zHoBy6HNKsk
