adding build info to code environment

--- a/common/conf/env/DEV.properties
+++ b/common/conf/env/DEV.properties
@@ -6,6 +6,7 @@ tag_indexes.bucket=aws-frontend-pressed
 
 assets.path=/assets/
 images.path=//i.guimcode.co.uk.global.prod.fastly.net
+images.uploads.token=fake-value
 static.path=http://static.guim.co.uk
 static.securePath=https://static-secure.guim.co.uk
 staticSport.path=http://sport.guim.co.uk
